[package]
name = "tree-sitter-cython"
description = "cython grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "cython"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-cython"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.21.0-alpha.1"

[build-dependencies]
cc = "1.0"
